# mobileSAM-Android-MNN

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/mSAM/: MainActivity.java  mSAM.java
app/src/main/jni/: CMakeLists.txt  jni_intereface.cpp  ndkcamera.cpp  ndkcamera.h  sam.cpp  sam.h
app/src/main/jni/opencv-mobile-3.4.18-android/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
app/src/main/jni/opencv-mobile-3.4.18-android/sdk/native/jni/include/opencv2/core/: bindings_utils.hpp
app/src/main/res/values/: strings.xml
